styles.css
.row,
.col-1,
.col-9,
.container-fluid,
.col {
  /* border: 1px solid black; */
  /* height: 100px; */
  /* padding: 0px; */
}

.main-toolbox-row {
  background-color: pink;
}

.main-toolbox-col {
  min-width: 130px;
  text-align: center;
}

@media screen and (min-width: 580px) {
  .main-toolbox-col {
    text-align: left;
  }
}

.main-toolbox-col img {
  margin-top: 5px;
  margin-bottom: 5px;
}

.search-bar-col {
  text-align: center;
  padding: 0;
}

@media screen and (min-width: 580px) {
  .search-bar-col {
    text-align: right;
  }
}

#search-bar {
  border-color: lightgray;
  background: lightgray url('assets/search.svg') no-repeat left center;
  background-size: 25px;
  border-radius: 10px;
  height: 35px;
  min-width: 375px;
  padding-left: 30px;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-right: 5px;
}

.email-preview-col {
  padding: 0;
  height: 300px;
  min-width: 440px;
  width: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  border-bottom: solid black;
}

@media screen and (min-width: 940px) {
  .email-preview-col {
    max-width: 440px;
    min-height: 96vh;
  }
}

.email-preview {
  min-height: 100px;
  border-bottom: solid black;
  padding: 15px;
}

.email-preview-selected {
  background-color: lightgray;
}

.email-picture {
  background-color: lightpink;
  max-height: 70px;
  max-width: 70px;
  border-radius: 50px;
  text-align: center;
  font-weight: bold;
  font-size: 45px;
  margin-left: 10px;
}

.email-sender {
  font-weight: bold;
  font-size: 20px;
}

.arrow-container {
  text-align: right;
  align-self: center;
  margin-right: 15px;
}

.arrow {
  border: solid black;
  border-width: 0 3px 3px 0;
  display: inline-block;
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  width: 30px;
  height: 30px;
}

.email-container {
  min-width: 500px;
}

@media screen and (max-width: 939px) {
  .email-container {
    border-top: 3px solid black;
  }
}

.email-row {
  padding: 5px;
}

.email-toolbox-col {
  text-align: right;
}

.email-content-col {
  overflow-y: scroll;
  max-height: 89vh;
}

